# QtLog

./: CMakeLists.txt  LICENSE.md  TODO.md
src/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  version.h
